# rust-loan-calculator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  License.md  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  project_feedback.md
.github/workflows/: rust.yml
Checkpoints/: MA-R101_W01L01_Checkpoint.md
Journal/: MA-R101_W01L01_Reflection.md
docs/: repo-setup-guide.md
src/: main.rs
